--- a/AirBNB/Web.config
+++ b/AirBNB/Web.config
@@ -5,9 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name= "DB"  connectionString= " Data Source=mt-projects.database.windows.net
-;
-                                   Initial Catalog=Projects; User ID=mt; Password=TtMm050958" />
+    <add name= "DB"  connectionString= " Data Source=mt-projects.database.windows.net;
+    Initial Catalog=Projects; User ID=mt; Password=TtMm050958" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
