--- a/AirBNB/bin/AirBNB.dll.config
+++ b/AirBNB/bin/AirBNB.dll.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name= "DB"  connectionString= " Data Source=Media.ruppin.ac.il;
-                                   Initial Catalog=igroup101_test2; User ID=igroup101; Password=igroup101_69556" />
+    <add name= "DB"  connectionString= " Data Source=mt-projects.database.windows.net;
+    Initial Catalog=Projects; User ID=mt; Password=TtMm050958" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
